@@ -11,6 +11,10 @@ def eq(a, b):
     return type(a) is type(b) and a == b \
        and (a.default_factory == b.default_factory if isinstance(a, defaultdict) else True)
 
+def S(*args):
+    """"Set literal" for the poor python 2.6"""
+    return set(args)
+
 def inc(x):
     return x + 1
 
@@ -39,7 +43,7 @@ def test_join():
     assert eq(join([('a', 'b'), ('c',)]), tuple('abc'))
     assert eq(join([{'a': 1}, {'b': 2}]), {'a': 1, 'b': 2})
     assert eq(join([{'a': 1}, {'a': 2}]), {'a': 2})
-    assert eq(join([{1,2}, {3}]), {1,2,3})
+    assert eq(join([S(1,2), S(3)]), S(1,2,3))
 
     it1 = (x for x in range(2))
     it2 = (x for x in range(5, 7))
@@ -54,7 +58,7 @@ def test_join_iter():
     assert join(iter('abc')) == 'abc'
     assert join(iter([[1], [2]])) == [1, 2]
     assert eq(join(iter([{'a': 1}, {'b': 2}])), {'a': 1, 'b': 2})
-    assert eq(join(iter([{1,2}, {3}])), {1,2,3})
+    assert eq(join(iter([S(1,2), S(3)])), S(1,2,3))
 
     it1 = (x for x in range(2))
     it2 = (x for x in range(5, 7))
@@ -65,7 +69,7 @@ def test_join_iter():
 def test_walk():
     assert eq(walk(inc, [1,2,3]), [2,3,4])
     assert eq(walk(inc, (1,2,3)), (2,3,4))
-    assert eq(walk(inc, {1,2,3}), {2,3,4})
+    assert eq(walk(inc, S(1,2,3)), S(2,3,4))
     assert eq(walk(hinc, {1:1,2:2,3:3}), {2:2,3:3,4:4})
 
 def test_walk_iter():
@@ -76,10 +80,10 @@ def test_walk_iter():
     assert isinstance(it, Iterator) and list(it) == [1,2,3]
 
 def test_walk_extended():
-    assert walk(None, {2, 3}) == {2, 3}
-    assert walk(r'\d+', {'a2', '13b'}) == {'2', '13'}
+    assert walk(None, S(2, 3)) == S(2, 3)
+    assert walk(r'\d+', S('a2', '13b')) == S('2', '13')
     assert walk({'a': '1', 'b': '2'}, 'ab') == '12'
-    assert walk({1,2,3}, (0, 1, 2)) == (False, True, True)
+    assert walk(S(1, 2, 3), (0, 1, 2)) == (False, True, True)
 
 def test_walk_keys():
     assert walk_keys(str.upper, {'a': 1, 'b':2}) == {'A': 1, 'B': 2}
@@ -98,14 +102,14 @@ def test_walk_values_defaultdict():
 def test_select():
     assert eq(select(_>1, [1,2,3]), [2,3])
     assert eq(select(_>1, (1,2,3)), (2,3))
-    assert eq(select(_>1, {1,2,3}), {2,3})
+    assert eq(select(_>1, S(1,2,3)), S(2,3))
     assert eq(select(_[1]>1, {'a':1,'b':2,'c':3}), {'b':2,'c':3})
     assert select(_[1]>1, defaultdict(int)) == {}
 
 def test_select_extended():
     assert select(None, [2, 3, 0]) == [2, 3]
     assert select(r'\d', 'a23bn45') == '2345'
-    assert select({1,2,3}, (0, 1, 2, 4, 1)) == (1, 2, 1)
+    assert select(S(1,2,3), (0, 1, 2, 4, 1)) == (1, 2, 1)
 
 def test_select_keys():
     assert select_keys(_[0] == 'a', {'a':1, 'b':2, 'ab':3}) == {'a': 1, 'ab':3}
