@@ -1,4 +1,5 @@
 - added experimental python 3 support
+- added python 2.6 support
 - published idistinct(), isplit(), isplit_at(), isplit_by()
 
 0.8
